<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tv_title"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="text"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tv_description"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:hint="@string/description"
        android:inputType="text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tv_priority"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        android:hint="@string/priority"
        android:inputType="number"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent=".2"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_two"
        app:layout_constraintGuide_percent=".55"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_update"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:text="@string/Update"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tv_priority"
        app:layout_constraintStart_toStartOf="@id/guideline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:text="@string/update"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tv_priority"
        app:layout_constraintStart_toStartOf="@id/guideline_two" />

</androidx.constraintlayout.widget.ConstraintLayout>